# MachineInfo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  main.rs  types.rs
src/db/: mod.rs  path.rs  settings.rs  window.rs
src/sys/: memory.rs  mod.rs  processor.rs  storage.rs
ui/: app-ui.slint
ui/pages/: page1.slint  page2.slint  page3.slint  page4.slint
ui/ui_lib/: row_entry.slint  sidebar.slint
