[package]
name = "MachineInfo"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
slint = "1.12.0"
sysinfo = "0.36.0"

[build-dependencies]
slint-build = "1.12.0"

[package.metadata.bundle]
name = "Machine Info"
identifier = "io.github.northshorehero.machineinfo"
icon = ["ui/icons/MachineInfo128x128.png", "ui/icons/MachineInfo32x32"]
version = "0.1.0"
resources = ["assets", "app.db"]
copyright = "Copyright (c) Daniel Mattila 2025. All rights reserved."
category = "Utility"
short_description = "A system information monitoring tool"
long_description = """
MachineInfo is a desktop application that provides detailed system information
and monitoring capabilities using Rust and Slint UI framework.
"""