[package]
name = "machine_info"
version = "0.1.3"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
slint = "1.12.1"
sysinfo = "0.37.0"

[build-dependencies]
slint-build = "1.12.1"

[package.metadata.bundle]
name = "Machine Info"
identifier = "io.github.northshorehero.machineinfo"
icon = ["ui/icons/MachineInfo128x128.png", "ui/icons/MachineInfo32x32"]
version = "0.1.3"
resources = ["assets", "app.db"]
copyright = "Copyright (c) Daniel Mattila 2025. All rights reserved."
category = "Utility"
short_description = "A system information monitoring tool"
long_description = """
MachineInfo is a desktop application that provides detailed system information
and monitoring capabilities using Rust and Slint UI framework.
"""
