[package]
name = "machine_info"
version = "0.1.8"
edition = "2024"

[dependencies]
directories = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
slint = "1.13.0"
sysinfo = "0.37.0"

[build-dependencies]
slint-build = "1.13.0"

[package.metadata.bundle]
name = "Machine Info"
identifier = "io.github.northshorehero.machineinfo"
icon = [
    "ui/icons/MachineInfo16x16.png",
    "ui/icons/MachineInfo16x16@2x.png",
    "ui/icons/MachineInfo32x32.png",
    "ui/icons/MachineInfo32x32@2x.png",
    "ui/icons/MachineInfo64x64.png",
    "ui/icons/MachineInfo128x128.png",
    "ui/icons/MachineInfo128x128@2x.png",
    "ui/icons/MachineInfo256x256.png",
    "ui/icons/MachineInfo256x256@.png",
    "ui/icons/MachineInfo512x512.png",
    "ui/icons/MachineInfo512x512@2x.png"
]
version = "0.1.8"
resources = ["assets", "LICENSE"]
copyright = "Copyright (c) Daniel Mattila 2025. All rights reserved."
category = "Utility"
short_description = "A system information monitoring tool"
long_description = """
MachineInfo is a desktop application that provides detailed system information
and monitoring capabilities using Rust and Slint UI framework.
"""
